tests/ElabConfig.lean.expected
tests/ElabConfig.lean:12:21: error: 'noSuchOption' is not a field of structure 'Aesop.Options'
tests/ElabConfig.lean:15:26: error: 'noSuchOption' is not a field of structure 'Lean.Meta.Simp.ConfigCtx'
